Adding basic settings window
Signed-off-by: Simon Egli <simon.egli@bbv.ch>

--- a/PresentationApp/qml.qrc
+++ b/PresentationApp/qml.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>RootView.qml</file>
+        <file>MenuView.qml</file>
+        <file>AlarmSettings.qml</file>
     </qresource>
 </RCC>
