App improvment. Splitted up the RootView file in TimerRect and LabelInputText

--- a/PresentationApp/qml.qrc
+++ b/PresentationApp/qml.qrc
@@ -4,5 +4,7 @@
         <file>RootView.qml</file>
         <file>MenuView.qml</file>
         <file>AlarmSettings.qml</file>
+        <file>TimerRect.qml</file>
+        <file>LabelTextInput.qml</file>
     </qresource>
 </RCC>
