--- a/PresentationApp/qml.qrc
+++ b/PresentationApp/qml.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>RootView.qml</file>
-        <file>MenuView.qml</file>
-        <file>AlarmSettings.qml</file>
-        <file>TimerRect.qml</file>
-        <file>LabelTextInput.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/RootView.qml</file>
+        <file>qml/MenuView.qml</file>
+        <file>qml/AlarmSettings.qml</file>
+        <file>qml/TimerRect.qml</file>
+        <file>qml/LabelTextInput.qml</file>
     </qresource>
 </RCC>
