Init version of WorkShop2 MeileStone1

--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,8 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>ButtonControl.qml</file>
+        <file>TimerRect.qml</file>
+        <file>LoadCircle.qml</file>
+        <file>InputWithLabel.qml</file>
     </qresource>
 </RCC>
