--- a/qml.qrc
+++ b/qml.qrc
@@ -1,9 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>ButtonControl.qml</file>
-        <file>TimerRect.qml</file>
-        <file>LoadCircle.qml</file>
-        <file>InputWithLabel.qml</file>
+        <file alias="main.qml">qml/main.qml</file>
+        <file alias="ButtonControl.qml">qml/ButtonControl.qml</file>
+        <file alias="TimerRect.qml">qml/TimerRect.qml</file>
+        <file alias="LoadCircle.qml">qml/LoadCircle.qml</file>
+        <file alias="InputWithLabel.qml">qml/InputWithLabel.qml</file>
+		<file alias="TimerView.qml">qml/TimerView.qml</file>
     </qresource>
 </RCC>
